# Production-RAG

./: .env.example  .gitignore  Makefile  README.md  cuda-test.py  docker-compose.yml  dockling.py  pyproject.toml
alembic/: env.py
api/: __init__.py  main.py  models.py
backend/: CLEANUP.md  Dockerfile  pgvector.yaml  pyproject.toml
backend/alembic/versions/: 4b2d9cd9cf26_initial_schema_with_documents_chunks_.py  add_query_log_table.py
backend/api/: main.py
backend/api/routes/: health.py  upload.py
backend/config/: settings.py
backend/database/: __main__.py  connection.py  models.py
backend/embeddings/: __init__.py  __main__.py  cli.py  service.py
backend/evaluation/: __main__.py  cli.py  generation_judges.py  generation_runner.py  retrieval_metrics.py  retrieval_runner.py
backend/generation/: __init__.py  context_manager.py  llm_service.py  models.py
backend/generation/prompt_templates/: __init__.py  judge_coherence_v1.py  judge_relevance_v1.py  summarize_v1.py  transcript_fallback_v1.py
backend/ingestion/: __main__.py  cli.py  enrichment.py  models.py  restructurer.py
backend/ingestion/loaders/: html_loader.py  pdf_loader.py
backend/observability/: logging.py
backend/pipeline/: __init__.py  models.py  rag.py
backend/retrieval/: __main__.py  cli.py  service.py
backend/streamlit_app/pages/: 11_test_runner.py  12_observability.py  1_overview.py  2_ingestion.py  3_chunker.py  4_enrichment.py  5_embeddings.py  6_database.py  9_retrieval_eval.py
backend/streamlit_app/utils/: __init__.py  cleanup.py  page_config.py  status.py
backend/test/: liteparse_pdf.py  test_api.py  test_continuous_eval.py  test_embeddings.py  test_generation.py  test_generation_judges.py  test_generation_runner.py  test_retrieval.py  test_retrieval_metrics.py
config/: __init__.py  settings.py
database/: __init__.py  __main__.py  models.py  repository.py  seed.py
embeddings/: cache.py  cli.py  models.py
evaluation/: __init__.py  cli.py  feedback.py  (+5 more)
(+102 files in other folders)
